<resources>
    <string name="app_name" translatable="false">Safe Vault</string>

    <string name="login_enter_u_passw">Enter You password</string>
    <string name="login_passw_hint">Password</string>
    <string name="login_ok">OK</string>
    <string name="login_show_passw">Show password</string>

    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="enter_passw_dialog_enter_u_passw">Enter You password</string>
    <string name="enter_passw_dialog_passw_hint">Password</string>
    <string name="enter_passw_dialog_confirm_u_passw">Confirm You password</string>
    <string name="enter_passw_dialog_confirm_passw_hint">Password</string>

    <string name="dialogs_yes">Yes</string>
    <string name="dialogs_no">No</string>
    <string name="dialogs_ok">OK</string>

    <string name="dialogs_ask_create_db_title">Create new DataBase?</string>
    <string name="dialogs_ask_create_db_message">The database files were not found, do You want to create a new database?</string>

    <string name="dialogs_create_passw_create_db_passw_title">Set Password</string>
    <string name="dialogs_create_passw_create_db_passw_message">Please set password for you DB</string>
    <string name="dialogs_message_wrong_passw_title">Wrong Password!</string>
    <string name="dialogs_message_wrong_passw_message">The password You entered is incorrect! Please try again</string>
    <string name="dialogs_show_passw">Show password</string>


    <string name="toasts_message_passws_mismatch_message">The entered passwords mismatch</string>

    <string name="fields_cont_descr_del_img_button">Delete image button</string>
    <string name="fields_cont_descr_datetime_brows_button">Datetime image button</string>

    <string name="fields_text_hint">Your text here</string>
    <string name="fields_multiline_text_hint">Your multiline text here</string>
    <string name="fields_number_hint">Your number here</string>
    <string name="fields_datetime_hint">Your date here</string>

    <string name="record_record_title_hint">Record title</string>
    <string name="record_icon_iconbutton">Record icon button</string>
    <string name="record_add_field_button_text">Add field</string>

    <string name="menu_field_type_text">Text</string>
    <string name="menu_field_type_number">Number</string>
    <string name="menu_field_type_login">Login</string>
    <string name="menu_field_type_password">Password</string>
    <string name="menu_field_type_multiline_text">Multiline text</string>
    <string name="menu_field_type_date">Date</string>
    <string name="menu_field_type_url">Url address</string>
    <string name="menu_field_type_email">Email</string>
    <string name="menu_field_type_pin">Pin</string>
    <string name="enter_field_name_title">Enter field name</string>
    <string name="enter_field_name_hunt">Field name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
