<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/textFieldMenuItem"
            android:orderInCategory="1"
            android:title="@string/menu_field_type_text"
            app:showAsAction="never"
            />
    <item
            android:id="@+id/numberFieldMenuItem"
            android:orderInCategory="2"
            android:title="@string/menu_field_type_number"
            />
    <item
            android:id="@+id/loginFieldMenuItem"
            android:orderInCategory="3"
            android:title="@string/menu_field_type_login"
            />
    <item
            android:id="@+id/passwordFieldMenuItem"
            android:orderInCategory="4"
            android:title="@string/menu_field_type_password"
            app:showAsAction="never"
            />
    <item
            android:id="@+id/multilineTextFieldMenuItem"
            android:orderInCategory="5"
            android:title="@string/menu_field_type_multiline_text"
            app:showAsAction="never"
            />
    <item
            android:id="@+id/dateFieldMenuItem"
            android:orderInCategory="6"
            android:title="@string/menu_field_type_date"
            app:showAsAction="never"
            />
    <item
            android:id="@+id/urlFieldMenuItem"
            android:orderInCategory="6"
            android:title="@string/menu_field_type_url"
            app:showAsAction="never"
            />
    <item
            android:id="@+id/emailFieldMenuItem"
            android:orderInCategory="6"
            android:title="@string/menu_field_type_email"
            app:showAsAction="never"
            />
    <item
            android:id="@+id/pinFieldMenuItem"
            android:orderInCategory="6"
            android:title="@string/menu_field_type_pin"
            app:showAsAction="never"
            />
</menu>