<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.tr1nks.safevault.activities.LoginActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/login_margin_vertical"
            android:layout_marginLeft="@dimen/login_margin_horisontal"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="@dimen/login_margin_horisontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/login_margin_vertical"
            app:layout_constraintVertical_bias="0.401" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="@dimen/login_margin_horisontal" android:layout_marginEnd="@dimen/login_margin_horisontal">
        <TextView
                android:text="@string/login_enter_u_passw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:labelFor="@+id/passwordEditText"
        />
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordEditText"
                    android:layout_weight="0.39"
                    android:hint="@string/login_passw_hint"
            />
            <Button
                    android:text="@string/login_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/okButton"
                    android:layout_weight="0.21"
                    android:onClick="okButtonHandler"/>
        </LinearLayout>
        <CheckBox
                android:text="@string/login_show_passw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/showPasswCheckBox"
        />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>