<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:orientation="vertical"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content">-->
    <!--<ImageView-->
    <!--android:src="@drawable/header_logo"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="64dp"-->
    <!--android:scaleType="center"-->
    <!--android:background="#FFFFBB33"-->
    <!--android:contentDescription="@string/app_name" />-->
    <!--<EditText-->
    <!--android:id="@+id/username"-->
    <!--android:inputType="textEmailAddress"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:layout_marginLeft="4dp"-->
    <!--android:layout_marginRight="4dp"-->
    <!--android:layout_marginBottom="4dp"-->
    <!--android:hint="@string/username" />-->
    <!--<EditText-->
    <!--android:id="@+id/password"-->
    <!--android:inputType="textPassword"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="4dp"-->
    <!--android:layout_marginLeft="4dp"-->
    <!--android:layout_marginRight="4dp"-->
    <!--android:layout_marginBottom="16dp"-->
    <!--android:fontFamily="sans-serif"-->
    <!--android:hint="@string/password"/>-->
    <!--</LinearLayout>-->
    <TextView
            android:text="@string/enter_passw_dialog_enter_u_passw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LabelTextView"
            android:labelFor="@+id/enterPasswEditText"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/enterPasswEditText"
            android:hint="@string/enter_passw_dialog_passw_hint"
    />
    <TextView
            android:text="@string/enter_passw_dialog_confirm_u_passw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:labelFor="@+id/confirmPasswEditText"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirmPasswEditText"
            android:hint="@string/enter_passw_dialog_confirm_passw_hint"
    />
</LinearLayout>