<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.tr1nks.safevault.activities.RecordActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="@dimen/record_margin_horisontal"
            android:layout_marginRight="@dimen/record_margin_horisontal"
            android:layout_marginTop="@dimen/record_margin_vertical"
            android:layout_marginBottom="@dimen/record_margin_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/recordContainLinearLayout"
                >

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/recordTitleEditText"
                        android:layout_weight="1"
                        android:hint="@string/record_record_title_hint"
                        />

                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_launcher"
                        android:id="@+id/recordIconImageButton"
                        android:contentDescription="@string/record_icon_iconbutton"
                        />
            </LinearLayout>
            <!--here adds a fields-->
            <!--here adds a fields-->
            <Button
                    android:text="@string/record_add_field_button_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addFieldButton"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
